3.0.1:

2011-05-09  Murray Cumming  <murrayc@murrayc.com>

	Fix the --enable-warnings=fatal build with GTK+ 3.1.x.

	* gtk/src/assistant.hg:
	* gtk/src/menuitem.hg: Add some #undef GTK_DISABLE_DEPRECATED so we can build
	with GTK+ 3.1.x.

2011-05-02  Murray Cumming  <murrayc@murrayc.com>

	EntryCompletion: signal_cursor_match_info(): Fix this.

	* gtk/src/entrycompletion.ccg: Correct the signal name so that this really
	connects to that signal.

2011-05-02  Murray Cumming  <murrayc@murrayc.com>

	Bin: Correct a code comment.

	* gtk/src/bin.ccg: add_pixlabel(): Correct a variable name and comment.
	Noticed by Kjell Ahlstedt.

2011-05-02  Murray Cumming  <murrayc@murrayc.com>

  MessageDialog: Correct the get_message_area() return type.

  * gtk/src/messagedialog.hg: get_message_area(): Return a Box instead of a VBox.
  This may have worked already, but this is a minor API change that should not
  affect anybody too much, and hopefully it will be OK this soon after the 3.0.0
  release.
  Noticed by Kjell Ahlstedt.

2011-05-02  Murray Cumming  <murrayc@murrayc.com>

	ScrolledWindow: Correct the get_v/hscrollbar() return types.

	* gtk/src/scrolledwindow.hg: get_hscrollbar(), get_vscrollbar(): Return
	Scrollbar instead of HScrollbar or VScrollbar, as this is what the C API
	really returns. This is not really an API break because these could never
	have been used until now, because they always returned 0.

3.0.0:

2011-04-05  Murray Cumming  <murrayc@murrayc.com>

	operator const void*(): Use GINT_TO_POINTER().

	* gtk/gtkmm/stockid.[h|cc]:
	* gtk/src/iconinfo.hg:
	* gtk/src/papersize.hg:
	* gtk/src/textiter.hg:
	* gtk/src/treeiter.hg:
	* gtk/src/treepath.hg:
	* gtk/src/treerowreference.hg: Use GINT_TO_POINTER() instead of a
	(const void*) cast, to avoid problems on unusual platforms.
	Daniel Elstner suggested this.

2011-04-04  Murray Cumming  <murrayc@murrayc.com>

	Use a BoolExpr typedef to make operator const void* clearer.

	* gtk/gtkmm/stockid.[h|cc]: