@@ -110,7 +110,6 @@ gtkmm_files_any_hg =		\
 	pagesetup.hg		\
 	paned.hg		\
 	papersize.hg		\
-	plug.hg			\
 	printcontext.hg		\
 	printoperation.hg	\
 	printoperationpreview.hg\
@@ -141,7 +140,6 @@ gtkmm_files_any_hg =		\
 	separatortoolitem.hg	\
 	settings.hg		\
 	sizegroup.hg		\
-	socket.hg		\
 	spinbutton.hg		\
 	spinner.hg		\
 	statusbar.hg		\
@@ -193,9 +191,11 @@ gtkmm_files_any_hg =		\
 
 gtkmm_files_posix_hg =		\
 	pagesetupunixdialog.hg	\
+	plug.hg			\
 	printer.hg		\
 	printjob.hg		\
-	printunixdialog.hg
+	printunixdialog.hg	\
+	socket.hg
 
 gtkmm_files_deprecated_hg =
 
