@@ -1,3 +1,10 @@
+2011-05-02  Kalev Lember  <kalev@smartlink.ee>
+
+	Don't build Gtk::Plug and Gtk::Socket on WIN32
+
+	* gtk/src/filelist.am: Moved plug.h and socket.h to
+	gtkmm_files_posix_hg. Bug #649187
+
 3.0.1:
 
 2011-05-09  Murray Cumming  <murrayc@murrayc.com>
